Bug 1959141 - Truncate event.longtask labels before use r=florian

It is expected and allowed both that task names can be long and that analysis
can be performed on the truncated values.

Differential Revision: https://phabricator.services.mozilla.com/D245106